# cer-analysis

./: .cursorrules  CLAUDE.md  Pipfile  README.md  README_en.md  pyproject.toml  requirements.txt
dev/v1.0-archive/: README.md  asr_metrics_refactored.py  cli.py
docs/: CER-Analysis-Tool-V2-改版建议书.md  CER-Analysis-Tool-V2-架构变更说明.md
docs/skills讨论/: CER-Evaluation-Skill-可行性分析.md
src/cer_analysis_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cer_tool/: __init__.py  __main__.py  cli.py  file_utils.py  gui.py  metrics.py
src/cer_tool/tokenizers/: __init__.py
tests/: pytest.ini  run_tests.py  test_P0_pytest修复_2026-02-06.md  test_boundary.py  test_cli.py  test_core_metrics.py  test_edit_ops_accurate.py  test_gui_pairing.py  test_gui_summary.py  test_normalize_strategy.py  test_preprocessing.py  test_tokenizers_unit.py  test_with_pytest_marks.py
tests/reports/: test_P1P2_全部完成_2026-02-06.md  test_V2改名与测试补强_2026-02-09.md
tests/scripts/: README.md
